@startuml
' hide the spot
' hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

' Define only the entities used in this diagram
entity party {}
entity party_role {}
entity party_role_type {}
entity party_relationship {}
entity party_relationship_type {}

party ||..|{ party_role
party_role_type ||..|{ party_role
party_relationship "from"  ||..|{ party_role
party_relationship "to"  ||..|{ party_role
party_relationship_type ||..|{ party_relationship
@enduml
